--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.8.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -21,6 +22,7 @@
     "webpack-dev-server": "^2.11.2"
   },
   "dependencies": {
+    "antd-mobile": "^2.2.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1"
